--- a/AnimeHubClient/Pages/Home.razor
+++ b/AnimeHubClient/Pages/Home.razor
@@ -14,23 +14,45 @@
     </div>
 
     <div class="row mt-5">
-        <div class="col text-center">
-            <h2 class="display-4 fw-bold mb-4">Top Rated Anime</h2>
+        <div class="col">
+            <h3 class="fw-bold mb-4">Top Rated Anime</h3>
         </div>
 
         <div class="col-12">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-4 justify-content-center">
-                @if (TopAnimes != null && TopAnimes.Any())
+                @if (IsLoading)
                 {
-                    foreach (var anime in TopAnimes)
+                    @for (int i = 0; i < 5; i++)
                     {
                         <div class="col d-flex justify-content-center">
-                            <div class="card shadow-sm anime-card">
-                                <img src="@(Http.BaseAddress?.ToString() + anime.ImageUrl)" class="card-img-top anime-img-top" alt="@anime.Title" />
+                            <div class="card anime-card border-0">
+                                <div class="skeleton skeleton-image"></div>
+                                @* <div class="skeleton skeleton-text-line mt-3 mx-auto"></div> *@
+
                                 <div class="card-body">
-                                    <h5 class="card-title text-truncate">@anime.Title</h5>
+                                    <h5 class="skeleton skeleton-text-line mx-auto"></h5>
+                                    @* <p class="skeleton skeleton-text-line-short"></p>
+                                    <div class="skeleton skeleton-button"></div> *@
+                                </div>
+                            </div>
+                        </div>
+                    }
+                }
+                else if (TopAnimes != null && TopAnimes.Any())
+                {
+                    @foreach (var anime in TopAnimes)
+                    {
+                        <div class="col d-flex justify-content-center">
+                            <div class="card anime-card border-0">
+                                <a href="anime/@anime.Id"><img src="@(Http.BaseAddress?.ToString() + anime.ImageUrl)" class="card-img-top anime-img-top" alt="@anime.Title" /></a>
+                                @* <a href="anime/@anime.Id" class="text-decoration-none"><h6 class="card-title fw-bold text-truncate mt-3 text-muted">@anime.Title</h6></a> *@
+
+                                <div class="card-body">
+                                    <a href="anime/@anime.Id" class="text-decoration-none"><h6 class="card-title fw-bold text-truncate text-muted">@anime.Title</h6></a>
+
+                                    @* <h6 class="card-title text-truncate">@anime.Title</h6>
                                     <p class="card-text text-muted mb-1"><i class="bi bi-star-fill" style="color: orange"></i> @anime.Rating</p>
-                                    <a href="anime/@anime.Id" class="btn btn-primary mt-2">View Details</a>
+                                    <a href="anime/@anime.Id" class="btn btn-primary mt-2">View Details</a> *@
                                 </div>
                             </div>
                         </div>
@@ -45,7 +67,7 @@
 
         <div class="row mt-5">
             <div class="col-12 text-center">
-                <h2 class="display-5 fw-bold mb-4">Browse by Category</h2>
+                <h3 class="fw-bold mb-4">Browse by Category</h3>
             </div>
             <div class="col-12">
                 <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 g-3 justify-content-center">
@@ -68,7 +90,7 @@
 
         <div class="row mt-5">
             <div class="col-12 text-center">
-                <h2 class="display-5 fw-bold mb-4">Browse by Genre</h2>
+                <h3 class="fw-bold mb-4">Browse by Genre</h3>
             </div>
             <div class="col-12">
                 <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 g-3 justify-content-center">
@@ -92,6 +114,7 @@
 </div>
 
 @code {
+    private bool IsLoading { get; set; } = true;
     private List<AnimeReadDto>? TopAnimes { get; set; }
     private List<CategoryReadDto>? Categories { get; set; }
     private List<GenreReadDto>? Genres { get; set; }
@@ -108,39 +131,9 @@
         {
             Console.WriteLine($"An error occurred while fetching home page data: {ex.Message}");
         }
+        finally
+        {
+            IsLoading = false;
+        }
     }
 }
-
-<style>
-    .hero-section {
-        background: url('/images/hero1.jpg') no-repeat center center;
-        background-size: cover;
-        position: relative;
-        padding: 6rem 0;
-    }
-
-    .hero-overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.4);
-    }
-
-    .hero-content {
-        position: relative;
-        z-index: 10;
-    }
-
-    /* Set a max width for the anime card to prevent it from getting too large on big screens */
-    .anime-card {
-        width: 14rem;
-    }
-
-    .anime-img-top {
-        aspect-ratio: 400 / 600;
-        object-fit: cover;
-        width: 100%
-    }
-</style>
