Updated models and the api

--- a/AnimeHubClient/Pages/Anime/AnimeList.razor
+++ b/AnimeHubClient/Pages/Anime/AnimeList.razor
@@ -1,4 +1,4 @@
-﻿@page "/anime"
+﻿@* @page "/anime"
 @using AnimeHub.Shared.Models.Dtos.Anime
 @using AnimeHubClient.Shared
 @inject HttpClient Http
@@ -121,4 +121,4 @@ else
             }
         }
     }
-}
+} *@
