--- a/AnimeHubClient/Pages/Anime/AnimeUpsert.razor
+++ b/AnimeHubClient/Pages/Anime/AnimeUpsert.razor
@@ -1,4 +1,4 @@
-﻿@page "/anime/create"
+﻿@* @page "/anime/create"
 @page "/anime/update/{Id:int}"
 @using AnimeHub.Shared.Models.Dtos.Anime
 @using AnimeHub.Shared.Models.Dtos.Category
@@ -324,4 +324,4 @@ else
 
         UploadedImageUrl = null; // Reset uploaded URL until upload completes
     }
-}
+} *@
