--- a/AnimeHubClient/Pages/Category/CategoryList.razor
+++ b/AnimeHubClient/Pages/Category/CategoryList.razor
@@ -1,4 +1,4 @@
-﻿@page "/category"
+﻿@* @page "/category"
 @using AnimeHub.Shared.Models.Dtos.Category
 @using AnimeHubClient.Shared
 @inject HttpClient Http
@@ -112,4 +112,4 @@ else
 
         }
     }
-}
+} *@
