--- a/AnimeHubClient/Shared/AnimeQuickView.razor
+++ b/AnimeHubClient/Shared/AnimeQuickView.razor
@@ -1,4 +1,4 @@
-﻿@inject NavigationManager Navigation
+﻿@* @inject NavigationManager Navigation
 
 <MudDialog>
     <DialogContent>
@@ -33,4 +33,4 @@
     [Parameter] public AnimeReadDto Anime { get; set; } = new();
 
     void Close() => MudDialog.Close();
-}
+} *@
