--- a/AnimeHubClient/Pages/Home.razor
+++ b/AnimeHubClient/Pages/Home.razor
@@ -38,9 +38,9 @@
                         </div>
                     }
                 }
-                else if (TopAnimes != null && TopAnimes.Any())
+                else if (TopRatedAnimes != null && TopRatedAnimes.Any())
                 {
-                    @foreach (var anime in TopAnimes)
+                    @foreach (var anime in TopRatedAnimes)
                     {
                         <div class="col d-flex justify-content-center">
                             <div class="card anime-card border-0">
@@ -115,7 +115,7 @@
 
 @code {
     private bool IsLoading { get; set; } = true;
-    private List<AnimeReadDto>? TopAnimes { get; set; }
+    private List<AnimeReadDto>? TopRatedAnimes { get; set; }
     private List<CategoryReadDto>? Categories { get; set; }
     private List<GenreReadDto>? Genres { get; set; }
 
@@ -123,7 +123,7 @@
     {
         try
         {
-            TopAnimes = await Http.GetFromJsonAsync<List<AnimeReadDto>>("api/anime");
+            TopRatedAnimes = await Http.GetFromJsonAsync<List<AnimeReadDto>>("api/anime/top");
             Categories = await Http.GetFromJsonAsync<List<CategoryReadDto>>("api/category");
             Genres = await Http.GetFromJsonAsync<List<GenreReadDto>>("api/genre");
         }
