--- a/AnimeHubClient/Pages/Category/CategoryUpsert.razor
+++ b/AnimeHubClient/Pages/Category/CategoryUpsert.razor
@@ -1,4 +1,4 @@
-﻿@* @page "/category/create"
+﻿@page "/category/create"
 @page "/category/update/{Id:int}"
 @using AnimeHub.Shared.Models.Dtos.Category
 @inject HttpClient Http
@@ -97,4 +97,4 @@ else
         IsProcessing = false;
         Navigation.NavigateTo("category");
     }
-} *@
+}
